// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField.vue renders OXD InputField 1`] = `
<div class="oxd-input-group oxd-input-field-bottom-space">
  <div class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div class="input-outer-wrapper" disabled="false">
      <!--v-if-->
      <!--v-if--><input class="oxd-input oxd-input--active">
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`InputField.vue renders OXD InputField type \`file\` 1`] = `
<div class="oxd-input-group oxd-input-field-bottom-space">
  <div class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=""><input type="file" class="oxd-file-input">
    <div class="oxd-file-div oxd-file-div--active">
      <!--v-if-->
      <div class="oxd-file-input-div">No file chosen</div><i class="oxd-icon oxd-icon--medium bi-upload oxd-file-input-icon"></i>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`InputField.vue renders OXD InputField type \`file\` with button 1`] = `
<div class="oxd-input-group oxd-input-field-bottom-space">
  <div class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=""><input type="file" class="oxd-file-input">
    <div class="oxd-file-div oxd-file-div--active">
      <div class="oxd-file-button">Browse</div>
      <div class="oxd-file-input-div">No file chosen</div><i class="oxd-icon oxd-icon--medium bi-upload oxd-file-input-icon"></i>
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`InputField.vue renders OXD InputField type \`input\` 1`] = `
<div class="oxd-input-group oxd-input-field-bottom-space">
  <div class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div class="input-outer-wrapper" disabled="false">
      <!--v-if-->
      <!--v-if--><input class="oxd-input oxd-input--active">
    </div>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;

exports[`InputField.vue renders OXD InputField type \`input\` with Hint 1`] = `
<div class="oxd-input-group oxd-input-field-bottom-space">
  <div class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="">
    <div class="input-outer-wrapper" disabled="false">
      <!--v-if-->
      <!--v-if--><input class="oxd-input oxd-input--active">
    </div>
    <p class="oxd-text oxd-text--p orangehrm-input-hint">This field has a hint</p>
  </div>
  <!--v-if-->
</div>
`;

exports[`InputField.vue renders OXD InputField type \`textarea\` 1`] = `
<div class="oxd-input-group oxd-input-field-bottom-space">
  <div class="oxd-input-group__label-wrapper">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class=""><textarea class="oxd-textarea oxd-textarea--active oxd-textarea--resize-vertical"></textarea>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>
`;
